--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Raleway&display=swap');
 
+body{
+background: #EDEEF0;
+
+}
+
 .header {
     width: 100%;
     background-image: url(../img/sha.jpg);
     min-height: 350px;
     background-size: cover;
     background-position: center;
-
+    box-shadow:  0 1px 3px 1px #696969;
 }
 
 li {
@@ -45,17 +50,36 @@ li a:hover {
 
 }
 
+.col-md-6{
+padding: 10px 20px;
+
+}
+
+.startbtn{
+margin: 14px 15px;
+display: inline-block;
+
+}
+
 .block {
-    margin-top: 110px;
-    margin-left: 50px;
-    margin-right: 50px;
+  box-sizing: border-box;
+  margin: 25px 15px 0 25px;
+  background: white;
+  box-shadow: 0 1px 0 0 #696969 ,0px 0px 4px 2px #808080;
+  border-radius: 5px;
+  padding-bottom: 15px;
 }
 h1,h2,h3,h4 {
     font-family: Raleway;
     font-size: 48px
 
 }
-
+h6{
+  margin: 15px 15px;
+}
+.startbtn{
+  min-width: 150px;
+}
 
 
 .btn-circle {
@@ -77,20 +101,22 @@ h1,h2,h3,h4 {
 
   }
 .text {
+      width: 80%;
+      font-size: 28px;
+      margin-top: 10px;
       font-family: Raleway;
       color: #808080;
+
 }
 
 .row {
-      padding-bottom: 150px;
+
 
 }
 
 .modal-content{}
 
 
-
-}
 
 .modal-dialog {
 margin-left: 50px;
@@ -109,6 +135,7 @@ form{
   flex-wrap: wrap;
   box-sizing: border-box;
   padding: 15px 25px;
+
 }
 
 
@@ -126,62 +153,115 @@ margin-bottom: 10px;
 }
 
 label{
+display: flex;
+align-items: center;
 width: 100%;
 height: 100%;
 color: white;
-font-size: 10px;
-background: #6899D7;
+font-size: 14px;
+background: #d987d1;
 cursor: pointer;
 border-radius: 4px;
 -ms-user-select: none;
       -moz-user-select: none;
       -khtml-user-select: none;
       -webkit-user-select: none;
+box-sizing: border-box;
+padding: 0 20px;
+font-family: Raleway;
+word-wrap: break-word;
+text-align: center;
+
 }
 
-#sec2{
+#form1{
 width: 50%;
 margin: 0 auto;
 }
 
 label:hover {
-background: #1C5297;
+background: #a5689e;
 
 }
 
 
 input[type="checkbox"]:checked + label{
-  background: black!important;
+  background: #a5689e!important;
 }
 
 input[type="checkbox"] {
   display: none;
 }
-
+.otpr {
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    position: relative;
+    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+0s;
+}
+.otpr:hover {
+    color: #000 !important;
+    background-color: transparent;
+    text-shadow: none;
+}
+.otpr:hover:before {
+    left: 0%;
+    right: auto;
+    width: 100%;
+}
+.otpr:before {
+    display: block;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 100%;
+    width: 0px;
+    z-index: -1;
+    content: '';
+    color: #000 !important;
+    background: #F7CA18;
+    border-radius: 5px;
+    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+0s;
+}
 .otpr{
-margin: 0 auto;
-display: block;
-box-sizing: border-box;
-height: 50px;
-font-size: 18px;
-padding: 5px 15px;
-background: gray;
-border-radius: 20px;
-
+  margin: 0 auto;
+  display: block;
+  box-sizing: border-box;
+  color: white;
+  height: 50px;
+  width: 150px;
+  font-size: 18px;
+  padding: 5px 15px;
+  background: #d987d1;
+  border-radius: 5px;
+  border: 0;
+  z-index: 0;
+}
+.otpr:active, .otpr:hover{
+border-width: 0px !important;
 }
 
-.title{
+.doctors {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-sizing: border-box;
+  overflow: hidden;
+  padding: 0 15px;
 
-font-family: Raleway;
-text-align: center;
-padding: 2px 0px;
-border-bottom: 1px solid white;
 }
+.doctors .circle{
+width: 100%;
+margin-bottom: 5px;
+border: 1px solid black;
 
-.content{
 
-  font-family: lato;
-  padding: 0 5px;
+
+}
+.doctors.circle:last-child{
+  margin-bottom: 0;
 }
 
 #bodyZoneBlocks{
@@ -209,6 +289,9 @@ border-bottom: 1px solid white;
   color: white;
   border: 1px solid white;
 }
+.bodyZone-block:hover{
+  background: #a5689e !important;
+}
 
 .bodyZone-input:checked + .bodyZone-block,
 .bodyPart-input:checked + .bodyPart-block {
@@ -219,3 +302,20 @@ border-bottom: 1px solid white;
 .hidden {
   display: none;
 }
+
+.startanime{
+animation: start 0.5s cubic-bezier(0.1, -0.6, 0.2, 0) forwards;
+}
+@keyframes start {
+  0%{
+    top: -5px;
+    opacity: 0;
+
+  }
+  100%{
+    top: 0;
+    opacity: 1;
+  }
+}
+
+
