--- a/POD/SDDDS/templates/SDDDS/index.html
+++ b/POD/SDDDS/templates/SDDDS/index.html
@@ -1,12 +1,15 @@
 <h1>Epic cool form</h1>
-{{ categories }}
+
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
 <form action="{% url 'sddds:process_symptoms' %}" method="post">
 {% csrf_token %}
 {% for i in categories %}
-        <input type="radio" name="symptom" id="symptom{{ forloop.counter }}" value="{{ i.symptoms_set.all }}">
-        <label for="symptom{{ forloop.counter }}">{{ i.symptoms_set.all }}</label><br>
+    <label>{{ i.category_name }}:</label><br>
+    {% for j in i.symptom_set.all %}
+        <input type="checkbox" name="slist[]" id="{{ i.category_name }}symptom{{ forloop.counter }}" value="{{ j }}">
+        <label for="{{ i.category_name }}symptom{{ forloop.counter }}">{{ j }}</label><br>
+    {% endfor %}
 {% endfor %}
 <input type="submit" value="Отправить">
 </form>
