[WIP] Moving to Django views and templates

--- a/POD/SDDDS/templates/SDDDS/results.html
+++ b/POD/SDDDS/templates/SDDDS/results.html
@@ -1,6 +1,6 @@
 <h1>{{ doctors }}</h1>
 <ul>
-{% for doc in doctors.results %}
+{% for doc in doctors %}
     <li>{{ doc }}</li>
 {% endfor %}
 </ul>
