--- a/POD/SDDDS/templates/SDDDS/index.html
+++ b/POD/SDDDS/templates/SDDDS/index.html
@@ -1,15 +1,34 @@
-<h1>Epic cool form</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		{% load static %}
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+		<link rel="stylesheet" href="{% static 'SDDDS/css/main.css' %}">
+		<link rel="stylesheet" href="{% static 'SDDDS/css/test.css' %}">
+		<title>Symptoms</title>
+	</head>
+	<body>
+		<h1>Выбор симптомов</h1>
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+		<form action="{% url 'sddds:process_symptoms' %}" method="post">
 
-<form action="{% url 'sddds:process_symptoms' %}" method="post">
-{% csrf_token %}
-{% for i in categories %}
-    <label>{{ i.category_name }}:</label><br>
-    {% for j in i.symptom_set.all %}
-        <input type="checkbox" name="slist[]" id="{{ i.category_name }}symptom{{ forloop.counter }}" value="{{ j }}">
-        <label for="{{ i.category_name }}symptom{{ forloop.counter }}">{{ j }}</label><br>
-    {% endfor %}
-{% endfor %}
-<input type="submit" value="Отправить">
-</form>
+			{% csrf_token %}
+			{% for i in categories %}
+				<h2 class="doctors">{{ i.category_name }}:</h2>
+				{% for j in i.symptom_set.all %}
+					<div class="circle">
+							<input type="checkbox" name="slist" id="{{ i.category_name }}symptom{{ forloop.counter }}" value="{{ j }}">
+							<label for="{{ i.category_name }}symptom{{ forloop.counter }}">{{ j }}</label><br>
+					</div>
+				{% endfor %}
+			{% endfor %}
+			<input type="submit" class="otprbtn" value="Отправить">
+
+		</form>
+		
+	</body>
+</html>
