--- a/POD/SDDDS/templates/SDDDS/results.html
+++ b/POD/SDDDS/templates/SDDDS/results.html
@@ -1,6 +1,22 @@
-<h1>{{ doctors }}</h1>
-<ul>
-{% for doc in doctors %}
-    <li>{{ doc }}</li>
-{% endfor %}
-</ul>
+<!DOCTYPE html>
+<html>
+	<head>
+		{% load static %}
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+		<link rel="stylesheet" href="{% static 'SDDDS/css/main.css' %}">
+		<link rel="stylesheet" href="{% static 'SDDDS/css/test.css' %}">
+		<title>Symptoms</title>
+	</head>
+	<body>
+		<h1></h1>
+		<ul>
+		{% for doc in doctors %}
+			<li>{{ doc }}</li>
+		{% endfor %}
+		</ul>
+	</body>
+</html>
