--- a/POD/SDDDS/templates/SDDDS/results.html
+++ b/POD/SDDDS/templates/SDDDS/results.html
@@ -9,10 +9,10 @@
 		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 		<link rel="stylesheet" href="{% static 'SDDDS/css/main.css' %}">
 		<link rel="stylesheet" href="{% static 'SDDDS/css/test.css' %}">
-		<title>Symptoms</title>
+		<title>Doctors</title>
 	</head>
 	<body>
-		<h1></h1>
+		<h1>Специалисты:</h1>
 		<ul>
 		{% for doc in doctors %}
 			<li>{{ doc }}</li>
