--- a/POD/SDDDS/templates/SDDDS/results.html
+++ b/POD/SDDDS/templates/SDDDS/results.html
@@ -15,7 +15,7 @@
 		<h1>Специалисты:</h1>
 		<ul>
 		{% for doc in doctors %}
-			<li>{{ doc }}</li>
+			<li><label class="doctors">{{ doc }}</label></li>
 		{% endfor %}
 		</ul>
 	</body>
