--- a/POD/SDDDS/static/SDDDS/css/test.css
+++ b/POD/SDDDS/static/SDDDS/css/test.css
@@ -12,7 +12,7 @@
     background-size: cover;
 	border-radius: 20px;
     background-position: center;
-    border-color: #EDEEF0;
+    border-color: gray;
 	border-bottom-width: 2px;
 	border-bottom-style: inset;
 	}
@@ -20,7 +20,7 @@
 .scategories-block {
     width: 100%;
     min-height: 10px;
-    border-color: #EDEEF0;
+    border-color: gray;
 	border-width: 2px;
 	border-style: inset;
 	color: #2A003E;
