Improved  templates and database contents

--- a/POD/SDDDS/static/SDDDS/css/test.css
+++ b/POD/SDDDS/static/SDDDS/css/test.css
@@ -23,9 +23,9 @@
     border-color: gray;
 	border-width: 2px;
 	border-style: inset;
-	color: #2A003E;
+	color: #EDEEF0;
 	font-size: 14px;
-	background: #EACAE0;
+	background: #2A003E;
 	cursor: pointer;
 	border-radius: 20px;
 	-ms-user-select: none;
